fix(vue3): center all collapse sidebar icons via flexbox

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -108,11 +108,12 @@
         padding: 0 !important;
 
         .svg-icon {
-          margin-left: 20px;
+          margin-left: 0;
+          margin-right: 0;
         }
 
         .sub-el-icon {
-          margin-left: 19px;
+          margin: 0 !important;
         }
       }
     }
@@ -124,11 +125,12 @@
         padding: 0 !important;
 
         .svg-icon {
-          margin-left: 20px;
+          margin-left: 0;
+          margin-right: 0;
         }
 
         .sub-el-icon {
-          margin-left: 19px;
+          margin: 0 !important;
         }
 
         .el-submenu__icon-arrow {
@@ -140,6 +142,7 @@
     .el-menu--collapse {
       .el-submenu {
         &>.el-submenu__title {
+          justify-content: center;
           &>span {
             height: 0;
             width: 0;
@@ -150,11 +153,9 @@
         }
       }
       .el-menu-item {
-        display: flex;
-        align-items: center;
         justify-content: center;
       }
-      .el-menu-item .sub-el-icon {
+      .sub-el-icon {
         margin: 0 !important;
       }
     }
